--- a/src/webapp/pages/myEdjectives.html
+++ b/src/webapp/pages/myEdjectives.html
@@ -7,14 +7,14 @@
         <div class="single-student">
             <h2>{{ student.name }}
                 <button type="button" class="btn btn-default" data-ng-click="removeStudent()">
-                    <span class="glyphicon glyphicon-remove-sign"></span>
+                    <span class="glyphicon glyphicon-trash"></span>
                 </button>
             </h2>
 
             <div class="studentClass" data-ng-repeat="class in student.classes">
                 <h3>{{ class.className }} (teacher {{ class.teacherEmail}})
                     <button type="button" class="btn btn-default" data-ng-click="removeClass()">
-                        <span class="glyphicon glyphicon-remove-sign"></span>
+                        <span class="glyphicon glyphicon-trash"></span>
                     </button>
                 </h3>
 
