tweak add-student UI

--- a/src/webapp/pages/myEdjectives.html
+++ b/src/webapp/pages/myEdjectives.html
@@ -77,7 +77,7 @@
         <div id="newStudentForm">
             <h4>Add a student</h4>
 
-            <input type="text" id="new-student-name"/>
+            <input type="text" id="new-student-name" placeholder="Name of student" />
             <button data-ng-click="addStudent()">Add</button>
             <button id="cancelAddStudent">Cancel</button>
         </div>
